[gd_scene load_steps=2 format=3 uid="uid://igh13wnobtho"]

[ext_resource type="Script" uid="uid://c06kjdyhedu22" path="res://Scripts/Menus/chat.gd" id="1_772yi"]

[node name="Chat" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 269.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_772yi")

[node name="ChatBox" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 14.0
offset_right = -14.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "
"
editable = false

[node name="MessageBox" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 144.0
offset_top = -66.0
offset_right = -148.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 18

[node name="SendButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -134.0
offset_top = -67.0
offset_right = -15.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "Send"
